# AudioRouter

./: .gitignore  CMakeLists.txt  README.md  build.bat
.claude/: settings.local.json
.github/workflows/: build.yml
src/: AudioDeviceManager.cpp  AudioDeviceManager.h  AudioEngine.cpp  AudioEngine.h  NoiseReductionTypes.h  NoiseSuppress.cpp  NoiseSuppress.h  RNNoiseProcessor.cpp  RNNoiseProcessor.h  SpeexProcessor.cpp  SpeexProcessor.h  main.cpp
